--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,8 @@
 
 @import './sections/theerastour';
 
+@import './sections/index.scss';
+
 @import './sections/colors';
 
 @import './sections/fonts';
