--- a/scss/sections/_shop.scss
+++ b/scss/sections/_shop.scss
@@ -1,14 +1,21 @@
 .taylor_shop {
     display: flex;
     /*siempre poner display flex  */
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    align-items: none;
     /* min-height: 600px; */
+    font-family: sans-serif;
+    font-size: small;
 
 
 
+
+}
+.letra-producto{
+    font-family: sans-serif;
+    font-size: small ;
 }
 
 /* desordenar para volver a ordenar */
@@ -18,7 +25,7 @@
     align-items: center;
     box-shadow: 1px 1px 5px 2px maroon;
     padding-bottom: 10px;
-    margin: 20px;
+    margin: 5px;
     font-family: sans-serif;
     /* margin para separar las cartas */
 
@@ -28,7 +35,7 @@
 }
 
 .producto img {
-    width: 230px;
+    width: 150px;
 
 
 }
@@ -93,6 +100,6 @@
 }
 
 .tay_merch img {
-    height: 150px;
+    height: 100px;
 }
 
