--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,12 +18,13 @@
 
 @import './sections/theerastour';
 
-@import './sections/index.scss';
-
-@import './sections/colors';
-
 @import './sections/fonts';
 
 @import './sections/reset';
 
+
 @import './sections/nav';
+
+@import './sections/index'
+
+
