--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -9,11 +9,11 @@
 }
 @keyframes tay {
     0%{
-        transform: translateY(30);
+        transform: translateY(0g);
     }
     50%{
 
-     transform: translateY(40px);
+     transform: translateY(100px);
     }
     100%{
         transform: translateY(0);
