--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -4,16 +4,16 @@
     width: 300px;
     height: 250px;
     animation-name: tay;
-    animation-duration: 80s ;
+    animation-duration: 100s ;
     
 }
 @keyframes tay {
     0%{
-        transform: translateY(0g);
+        transform: translateY(0);
     }
     50%{
 
-     transform: translateY(100px);
+     transform: translateY(150px);
     }
     100%{
         transform: translateY(0);
