--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,30 +1,20 @@
 
-/* para acomodar sin necesidad de br */
-.formulario input {
-
-    display: block;
-}
-
-/* propiedad overflow */
 
 
-.formulario {
-    display: block;
 
-}
+@import './sections/index';
 
 
 @import './sections/shop';
 
 @import './sections/theerastour';
 
+@import './sections/albums';
+
 @import './sections/fonts';
 
 @import './sections/reset';
 
 
-@import './sections/nav';
-
-@import './sections/index'
 
 
