--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -1,21 +1,85 @@
-.imgp{
-    margin-top: 30px;
-    margin: 20px;
-    width: 300px;
-    height: 250px;
-    animation-name: tay;
-    animation-duration: 100s ;
-    
+/* Estilos generales */
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa;
+    color: #333;
 }
-@keyframes tay {
-    0%{
-        transform: translateY(0);
-    }
-    50%{
 
-     transform: translateY(150px);
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.navbar-brand {
+    font-weight: bold;
+    color: #333;
+}
+
+.navbar-nav .nav-link {
+    color: #333;
+    transition: color 0.3s;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #007bff;
+}
+
+/* Estilos para las secciones */
+section {
+    margin-bottom: 40px;
+    border-radius: 8px;
+    background-color: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+/* Estilos para las imágenes dentro de las secciones */
+section img {
+    max-width: 50%;
+    height: auto;
+    display: block;
+    margin: 0 auto 20px;
+}
+
+
+/* Estilos para los encabezados de las secciones */
+h2 {
+    color: #007bff;
+}
+
+/* Estilos para el pie de página */
+footer {
+    background-color: #333;
+    color: #fff;
+    font-size: 14px;
+    padding: 10px 0;
+    text-align: center;
+}
+
+footer p {
+    margin: 0;
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        scale: 25%;
     }
-    100%{
-        transform: translateY(0);
+
+    to {
+        opacity: 1;
+        scale: 100%;
     }
 }
+
+img{
+    view-timeline-name: --image;
+    view-timeline-axis: block;
+    
+    animation-timeline: --image;
+    animation-name: show;
+
+    animation-range: entry 25% cover 50%;
+    animation-fill-mode:  both;
+}
+
